# depth_camera_extrinsic_calibration

./: CMakeLists.txt  README.md
app/: main.cpp
data/: depth_camera_params.yaml  depth_map.raw
